cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_22305_security.json
{
  "AWSTemplateFormatVersion": "2010-09-09",

  "Description": "AGILEFANT SECURITY GROUPS 1.0.0 - Author Chris Moran",

  "Parameters": {
    "VPC": {
      "Type": "String"
    },
    "AdminCIDR": {
      "Type": "String",
      "Default": "27.99.5.119/32ß"
    }
  },

  "Resources": {
    "LinuxSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription" : "Basic Web Access Security",
        "SecurityGroupIngress": [
          { "CidrIp": { "Ref": "AdminCIDR" }, "IpProtocol": "tcp", "FromPort": "22", "ToPort": "22" },
          { "SourceSecurityGroupId": { "Fn::GetAtt": [ "WebSecurityGroup","GroupId"]}, "IpProtocol": "tcp", "FromPort": "8080", "ToPort": "8080" }

        ],
        "VpcId": { "Ref": "VPC" }
      }
    },

    "WebSecurityGroup" : {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription" : "Basic Database Security",
        "SecurityGroupIngress": [
          { "CidrIp": "0.0.0.0/0", "IpProtocol": "tcp", "FromPort": "80", "ToPort": "80" }
        ],
        "VpcId": { "Ref": "VPC" }
      }
    },

    "DatabaseSecurityGroup" : {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription" : "Basic Database Security",
        "SecurityGroupIngress": [
          { "SourceSecurityGroupId": { "Fn::GetAtt": [ "LinuxSecurityGroup","GroupId"]}, "IpProtocol": "tcp", "FromPort": "3306", "ToPort": "3306" }
        ],
        "VpcId": { "Ref": "VPC" }
      }
    }
  },

  "Outputs": {
    "LinuxSecurityGroup": {
      "Value": {"Fn::GetAtt" : ["LinuxSecurityGroup","GroupId"]}
    },
    "DatabaseSecurityGroup": {
      "Value": {"Fn::GetAtt" : ["DatabaseSecurityGroup","GroupId"]}
    },
    "WebSecurityGroup": {
      "Value": {"Fn::GetAtt" : ["WebSecurityGroup","GroupId"]}
    }
  }
}
